bluec-tests/tests/valid/types_bool/multi/return_bool.c
_Bool return_true(void) {
    return 1;
}

_Bool return_false(void) {
    return 0;
}
