bluec-tests/tests/invalid/typedef/redeclare_symbol_same_scope1.c
int main(void) {
    typedef int AA;
    int AA;
    return 0;
}